Version 1.0.3 Bugfixing of Image not showing in background

--- a/style.less
+++ b/style.less
@@ -9,7 +9,6 @@
     background-position: center;
     background-size: cover;
     opacity: 0.1;
-    z-index: -100;
 }
 
 .CodeMirror-scroll,
